--- a/src/styles.css
+++ b/src/styles.css
@@ -44,6 +44,7 @@ button:hover {
 .complete-area {
   background-color: #ffffe0;
   width: 400px;
+  min-height: 200px;
   padding: 8px;
   margin: 8px;
   border-radius: 8px;
